<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DescriptionActivity"
    android:background="@color/black">

    <ImageView
        android:id="@+id/backdrop_image"
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:layout_marginBottom="4dp"
        android:src="@drawable/poster_dragon"
        android:scaleType="centerCrop"
        android:contentDescription="@string/movie_image_description" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="4dp"
        android:background="@color/darkTransparent"
        android:orientation="vertical"
        android:padding="@dimen/margin_vertical">

        <ImageView
            android:id="@id/image_movie"
            android:layout_width="150dp"
            android:layout_height="220dp"
            android:layout_marginTop="@dimen/margin_top_desc"
            android:layout_marginBottom="4dp"
            android:contentDescription="@string/txt_rating"
            android:scaleType="centerCrop"
            android:src="@drawable/poster_dragon" />

        <TextView
            android:id="@+id/rating"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="18dp"
            android:layout_marginTop="105dp"
            android:layout_toEndOf="@id/image_movie"
            android:background="@drawable/star_yellow"
            android:gravity="center"
            android:text="@string/txt_rating"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="106dp"
            android:layout_toEndOf="@id/rating"
            android:text="@string/text_movie"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/release_date_thumbnail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_horizontal"
            android:layout_marginTop="@dimen/margin_vertical"
            android:layout_below="@id/image_movie"
            android:text="@string/release_date_thumbnail"/>

        <TextView
            android:id="@+id/spacer_release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/image_movie"
            android:layout_marginStart="105dp"
            android:layout_marginTop="@dimen/margin_vertical"
            android:text="@string/spacing"/>

        <TextView
            android:id="@+id/release_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing"
            android:layout_marginTop="@dimen/margin_vertical"
            android:layout_below="@id/image_movie"
            android:layout_toEndOf="@id/spacer_release_date"
            android:text="@string/release_date"/>

        <TextView
            android:id="@+id/duration_thumbnail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_horizontal"
            android:layout_marginTop="@dimen/lineHeight"
            android:layout_below="@id/release_date_thumbnail"
            android:text="@string/duration_thumbnail"/>

        <TextView
            android:id="@+id/spacer_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/spacer_release_date"
            android:layout_marginStart="105dp"
            android:layout_marginTop="@dimen/lineHeight"
            android:text="@string/spacing"/>

        <TextView
            android:id="@+id/duration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing"
            android:layout_marginTop="@dimen/lineHeight"
            android:layout_below="@id/release_date"
            android:layout_toEndOf="@id/spacer_release_date"
            android:text="@string/duration"/>

        <TextView
            android:id="@+id/genre_thumbnail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_horizontal"
            android:layout_marginTop="@dimen/lineHeight"
            android:layout_below="@id/duration_thumbnail"
            android:text="@string/genre_thumbnail"/>

        <TextView
            android:id="@+id/spacer_genre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/spacer_duration"
            android:layout_marginStart="105dp"
            android:layout_marginTop="@dimen/lineHeight"
            android:text="@string/spacing"/>

        <TextView
            android:id="@+id/genre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing"
            android:layout_marginTop="@dimen/lineHeight"
            android:layout_below="@id/duration"
            android:layout_toEndOf="@id/spacer_release_date"
            android:text="@string/genre"/>

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/genre_thumbnail"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="@dimen/margin_vertical"
            android:text="@string/txt_description"
            android:textSize="14sp" />

    </RelativeLayout>
</RelativeLayout>