<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="200dp">

    <ImageView
        android:id="@+id/image_movie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:src="@drawable/poster_dragon"
        android:scaleType="centerCrop"
        android:contentDescription="@string/movie_image_description" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/darkTransparent"
        android:orientation="vertical"
        android:padding="@dimen/margin_vertical"
        android:layout_marginBottom="4dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_movie"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/title"
            android:text="@string/txt_year"
            android:layout_marginTop="16dp"
            android:layout_marginStart="4dp"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@color/lightGray"/>

        <TextView
            android:id="@+id/rating"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_below="@id/title"
            android:layout_marginTop="10dp"
            android:text="@string/txt_rating"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:background="@drawable/star_yellow"/>

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/rating"
            android:layout_marginTop="10dp"
            android:maxLines="3"
            android:text="@string/txt_description"
            android:textSize="14sp" />
    </RelativeLayout>
</RelativeLayout>